# android-imgui-new

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/game/ui/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/Include/: pch.h
app/src/main/cpp/Source/: EGL.cpp
app/src/main/java/com/game/ui/: App.java  Launcher.java  MainActivity.java
app/src/main/java/com/game/ui/Views/: mySurfaceView.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/game/ui/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
